--- a/styles/architect.css
+++ b/styles/architect.css
@@ -6,13 +6,17 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+body {
+    margin: 0px;
+}
+
 header {
     background-color: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
 }
 
 /* nav styles */
-.nav-title {
+.section-title {
     color: #131313;
     font-family: Work Sans;
     font-size: 2.8rem;
@@ -94,6 +98,7 @@ main {
 .team-container {
     display: flex;
     align-items: center;
+    padding-top: 100px;
 }
 
 .img-container {
@@ -126,6 +131,12 @@ main {
     font-weight: 700;
 }
 
+.team-description {
+    color: #727272;
+    font-family: Work Sans;
+    font-weight: 400;
+}
+
 /* responsive style */
 /* mobile devices */
 @media screen and (max-width:576px) {
@@ -134,8 +145,15 @@ main {
         padding: 20px;
     }
 
-    nav {
+    nav, .team-container {
         flex-direction: column;
+    }
+    .img-container {
+        grid-template-columns: 1fr;
+    }
+
+    .team-content {
+        padding: 0 20px;
     }
 }
 
@@ -145,7 +163,7 @@ main {
         padding: 50px;
     }
 
-    nav {
+    nav, .team-container {
         flex-direction: column;
     }
 
