--- a/styles/architect.css
+++ b/styles/architect.css
@@ -184,6 +184,7 @@ main {
     padding-bottom: 50px;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 
 
@@ -194,9 +195,15 @@ main {
 
         padding: 20px;
     }
-
+    nav>ul {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 10px;
+    }
     nav,
-    .team-container {
+    .team-container
+    
+    {
         flex-direction: column;
     }
 
@@ -208,13 +215,30 @@ main {
         padding: 0 20px;
     }
 
-    .card-container {
+    .card-container,
+    .sponsor-logo-container {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 40px;
     }
+    .facts-description {
+        width:auto;
+        padding-left: 10px;
+        
 }
+.section-title{
+    padding-left: 10px;
+}
+.section-description{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.sponsor-logo-container img{
+    width: 165px;
+}
+}
+
 
 /* tablet or medium devices */
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -223,10 +247,21 @@ main {
     }
 
     nav,
-    .team-container {
+    .team-container,
+    .sponsor-logo-container {
         flex-direction: column;
     }
 
+    .sponsor-logo-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+    
+    .sponsor-logo-container img{
+        width: 200px;
+    }
     .card-container {
 
         justify-content: center;
